force-app/main/default/objects/opd_collection__c/opd_collection__c.object-meta.xml
<CustomObject>
    <label>opd_collection</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>opd_collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>