force-app/main/default/objects/opd_collection__c/fields/opdBillId__c.field-meta.xml
<CustomField>
    <fullName>opdBillId__c</fullName>
    <label>opdBillId</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>