force-app/main/default/objects/opd_collection__c/fields/opdCollectionDate__c.field-meta.xml
<CustomField>
    <fullName>opdCollectionDate__c</fullName>
    <label>opdCollectionDate</label>
    <type>Date</type>
</CustomField>