force-app/main/default/objects/opd_collection__c/fields/particularId__c.field-meta.xml
<CustomField>
    <fullName>particularId__c</fullName>
    <label>particularId</label>
    <precision>11</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>